--- a/src/app/componentss/user/user-list/user-list.component.html
+++ b/src/app/componentss/user/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <p-confirmPopup></p-confirmPopup>
 
-<div class="container p-0 mt-3">
-    <div class="d-flex justify-content-between align-items-center mb-3">
+<div class="container p-0  mt-3">
+    <div class="d-flex justify-content-between align-items-center m-1">
         <h3 class="mt-3">Users List</h3>
         <button class="btn btn-primary" routerLink="/create-user">Create New</button>
     </div>
@@ -10,9 +10,8 @@
         <ng-template pTemplate="header">
             <tr>
                 <th style="width:5%"></th>
-                <!-- <th>Id</th> -->
                 <th style="width:40%">Email</th>
-                <th style="width:40%">Name</th>
+                <th style="width:35%">Name</th>
                 <th>Actions</th>
             </tr>
         </ng-template>
@@ -21,10 +20,8 @@
                 <td>
                     <img [alt]="product.first_name" src="{{product.avatar}}" />
                 </td>
-                <!-- <td>{{product.id}}</td> -->
                 <td>{{product.email}}</td>
                 <td>
-
                     <span class="ml-1 vertical-align-middle">{{product.first_name}} {{product.last_name}}</span>
                 </td>
                 <td>
